# message

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  openapi.json
api/: Cargo.toml
api/src/: app.rs  config.rs  lib.rs  main.rs
api/src/http/: mod.rs
api/src/http/health/: handler.rs  mod.rs  routes.rs
api/src/http/messages/: handlers.rs  routes.rs
api/src/http/server/: api_error.rs  app_state.rs  authorization.rs  mod.rs  response.rs
api/tests/: api.rs  http_messages_integration.rs  messages.rs
api/tests/context/: mod.rs
compose/: init-uuid.sql
core/: Cargo.toml
core/.sqlx/: query-147aaffb9f32167070af71f072de07b7e80934e43eaffb05faf33cec58c35009.json  query-1662c7252645c434cdb9cd51dad7acf5c201e5a704309dac3be4eae149adf441.json  query-190f62b4d1d6cb0cd4d934a459cc881d58fe5d371fd6c59c24f7237a7e82a4c0.json  query-350acad1955b20f76070a18e8aec7392c487c961d39a80e3be59386d70809380.json  query-39e16ec6ca91385630e47ef3fb3edaf03b120acdee5aaabd81e30025dc875e84.json  query-5430564bafb4458d9c7883e9ce75a98f22d68f538701e53bcb5ec626346142f3.json  query-788084e6e318ab04b9ed156b1aef529990f1994f706bf046676751125a82184d.json  query-794635f3edb8100c43a8719f59e7cd6853742d62e7d276d5269c63350eb3be9c.json  query-7d857cc10a0b9a3871d484970d88b0d4d2880dd65163586a2d41cb57076f346c.json  query-b8db2e369ab21a4183d271a779ac0d50f15449a8166e1ddcdd2985d9eaaf6096.json  query-c79afcf255f595b58fc2d2aa9f607957728d2e7231bc19ebcaae2ab971f4d299.json  query-cfec19ba9637270b17a78fbd07223f0973c42e2f10469e4cb9ab93e6cd0dfac7.json  query-d4c7757cce8518f9edbf2a62b715d38f44f555184895549fa51344da6ba72683.json  query-d51b5e1686d50a2f32571d5ac1d6751c99d7e7b8618c8882238c8a2d8f5dc2cf.json  query-e83c0a21807e25d12194d7093cf05bedce67fe00736d37ada82ef4ec766baf08.json
core/migrations/: 20251103202930_create_message_table.down.sql  20251103202930_create_message_table.up.sql  20251117120000_create_outbox_table.down.sql  20251117120000_create_outbox_table.up.sql
core/src/: lib.rs
core/src/application/: mod.rs
core/src/domain/: mod.rs
core/src/domain/common/: mod.rs  services.rs
core/src/domain/health/: entities.rs  mod.rs  port.rs  services.rs
core/src/domain/message/: entities.rs  mod.rs  ports.rs  services.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/outbox/: event.rs  mod.rs  writer.rs
core/tests/: message_repo_tests.rs  message_service_tests.rs  mongo_repo_integration.rs
(+24 files in other folders)
