[package]
name = "message"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0.17"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mongodb = { version = "2", features = ["tokio-runtime"] }
futures-util = "0.3"
dotenv = "0.15"